--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,20 @@
 {
-  "name": "SPHERE WIFI",
-  "short_name": "SPHERE",
-  "start_url": ".",
+  "name": "SPHERE",
+  "short_name": "CodeMgr",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "background_color": "#f7f9fb",
+  "theme_color": "#10B981",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2885/2885417.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2885/2885417.png",
       "sizes": "512x512",
       "type": "image/png"
     }
