--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-manager-pwa",
+  "name": "sphere.hotspot-pwa",
   "version": "1.0.0",
   "description": "Offline Code Management PWA",
   "main": "index.html",
