--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "SPHERE HOTSPOT",
+  "name": "Code Generator & Manager",
   "short_name": "SPHERE",
   "description": "Offline Code Management App for Wi-Fi portals",
   "start_url": "/",
@@ -9,42 +9,22 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-96x96.png",
+      "src": "https://img.icons8.com/color/96/000000/wifi-logo.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-144x144.png",
+      "src": "https://img.icons8.com/color/144/000000/wifi-logo.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-192x192.png",
+      "src": "https://img.icons8.com/color/192/000000/wifi-logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512x512.png",
+      "src": "https://img.icons8.com/color/512/000000/wifi-logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
